<resources>
    <string name="app_name">Tarlad</string>
    <string name="done">Done</string>

    <string name="token_key">token</string>
    <string name="user_key">user</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="tarlad">Tarlad</string>
    <string name="new_chat">New Chat</string>
    <string name="add_participants">Add participants</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="bye">Bye!</string>
    <string name="empty_email_field">Empty email field</string>
    <string name="bad_email_address">Bad email address</string>
    <string name="empty_password_field">Empty password field</string>
    <string name="empty_confirm_password_field">Empty confirm password field</string>
    <string name="password_and_confirm_password_are_not_equal">Password and confirm password are not equal</string>
    <string name="empty_nickname_field">Empty nickname field</string>
    <string name="empty_name_field">Empty name field</string>
    <string name="empty_surname_field">Empty surname field</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="register">register</string>
    <string name="choose_users">Choose users</string>
    <string name="participants">Participants</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="editing">Editing:</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="admin">admin</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select image</string>
    <string name="delete_image">Delete image</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_participant">Delete participant</string>
    <string name="chat_title">Chat title:</string>
    <string name="add_title">Add title</string>
    <string name="message">Message…</string>
    <string name="image">Image</string>
    <string name="settings">Settings</string>
    <string name="your_name">Your name</string>
    <string name="your_surname">Your surname</string>
    <string name="your_nickname">Your nickname</string>
    <string name="leave_chat">Leave chat</string>


</resources>
