<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.tarlad.client.ui.views.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarInclude"
            layout="@layout/toolbar"
            app:title="@{vm.toolbarTitle}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_name"
                    android:text="@={vm.name}"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/editText" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/surname"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_surname"
                    android:text="@={vm.surname}"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/editText" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/nickname_status"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:src="@drawable/ic_done"
                    app:tint="@color/green"
                    android:visibility="@{vm.nicknameStatus ? View.VISIBLE : View.GONE}"/>

                <ProgressBar
                    android:id="@+id/nickname_progress"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:visibility="@{vm.nicknameProgress ? View.VISIBLE : View.GONE}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_nickname"
                    android:text="@={vm.nickname}"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/editText" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>