<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.tarlad.client.ui.views.chat.ChatViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/chat_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            tools:context=".ui.views.chat.ChatActivity">

            <include
                android:id="@+id/toolbarInclude"
                layout="@layout/toolbar"
                app:title="@{vm.title}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messages_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayLight"
                android:elevation="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:visibility="@{vm.isEdit ? View.VISIBLE : View.GONE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="12dp"
                        android:text="@string/editing"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{vm.editMessage.data}"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="top"
                        android:background="@android:drawable/ic_menu_close_clear_cancel"
                        android:backgroundTint="@color/black"
                        android:onClick="@{(v) -> vm.stopEditing()}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/message_background"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@null"
                        android:onClick="openImages"
                        android:text="@string/image"
                        android:textColor="@drawable/button_send" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/message"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:padding="12dp"
                        android:scrollbars="vertical"
                        android:text="@={vm.message}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/editText" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@null"
                        android:onClick="@{(v) -> vm.sendMessage()}"
                        android:text="@string/send"
                        android:textColor="@drawable/button_send"
                        android:visibility="@{vm.isEdit ? View.GONE : View.VISIBLE}" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@null"
                        android:onClick="@{(v) -> vm.editMessage()}"
                        android:text="@string/edit"
                        android:textColor="@drawable/button_send"
                        android:visibility="@{vm.isEdit ? View.VISIBLE : View.GONE}" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/imageFrame"
            android:background="@color/blackTransparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:onClick="@{() -> vm.clear()}"
            android:visibility="@{vm.image == null || vm.image.empty ? View.GONE : View.VISIBLE }">

            <ImageView
                android:id="@+id/imageView"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:urlNotCircle="@{vm.image}" />

        </RelativeLayout>
    </RelativeLayout>
</layout>